[package]
name = "nais-env"
version = "0.6.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
kube = { version = "0.99.0", features = ["runtime", "derive", "config"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.33", features = ["derive"] }
clap_complete = "4.5.1"
oauth2 = { version = "4.4", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
thiserror = "1.0"
